bk_ida/gccida/c3/validate_change
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_change/src/recog.c:670:1: error: unknown type name 'change_t_0'; did you mean 'change_t'?
change_t_0 *v8; // rax 
^~~~~~~~~~
change_t
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_change/src/recog.c:178:3: note: 'change_t' declared here
} change_t;
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_change/src/recog.c:687:20: error: expected expression
v8 = ( change_t_0 *)xrealloc( changes, 32LL * v9); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_change/src/recog.c:687:8: error: use of undeclared identifier 'change_t_0'
v8 = ( change_t_0 *)xrealloc( changes, 32LL * v9); 
       ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/validate_change/src/obj/recog.o] Error 1
